--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -4,20 +4,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
-    xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-    xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App"
     xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels">
    
-
-    <Grid
-        MinWidth="300"
-        MinHeight="300"
-        Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+    <Grid MinWidth="300" MinHeight="300" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
 
         <Grid.Resources>
             <Style TargetType="CheckBox">
@@ -25,153 +19,79 @@
             </Style>
         </Grid.Resources>
 
-        <Grid x:Name="settingsGrid" Margin="3,75,3,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-            <!--
-                desktop notif
-                language
-                account
-                nexus account
-                prio account
-                auto update
-                auto update "channel"
-                theme
-                create theme
-                log path
-                view logs
-                Open mode for all tools
-                Auto install mods
-                project auto saving
-                Default Project Folder
-                exec path
-                mat depo path
-
-                tw3 exec path
-                modkit path
-                uncooked depo path
-            -->
-
-            <syncfusion:SfAccordion
-                x:Name="SfAccordion"
-                VerticalAlignment="Stretch"
-                AccentBrush="{DynamicResource AccentBrush}"
-                Background="{DynamicResource RegionBrush}"
-                IsTextSearchEnabled="True"
-                Visibility="Visible">
-                <syncfusion:SfAccordionItem Header="General" Unselected="SfAccordionItem_Unselected">
-
-                    <StackPanel Orientation="Vertical">
-                        <syncfusion:PropertyGrid
-                            x:Name="GeneralSettingsPG"
-                            AutoGeneratingPropertyGridItem="GeneralSettingsPG_OnAutoGeneratingPropertyGridItem"
+        <syncfusion:PropertyGrid x:Name="SettingsPropertygrid" Grid.Row="0"  Margin="3,75,3,0"
+                            AutoGeneratingPropertyGridItem="SettingsPropertygrid_OnAutoGeneratingPropertyGridItem"
                             CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
                             EnableGrouping="True"
-                            SelectedObject="{Binding generalSettingsPGModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            SortDirection="{x:Null}" />
+                            SelectedObject="{Binding Settings, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                        <StackPanel
-                            Margin="5"
-                            HorizontalAlignment="Right"
-                            Orientation="Horizontal">
-                            <TextBlock
-                                Margin="5"
-                                HorizontalAlignment="Center"
-                                Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
-                                Text="Theme changes will take affect after restart." />
-                            <Button
-                                x:Name="ExitRestart"
-                                Click="ExitRestart_Click"
-                                Content="Exit and Restart" />
+        <Grid Grid.Row="1">
 
-                        </StackPanel>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <StackPanel Grid.Column="1" Margin="5" HorizontalAlignment="Right" Orientation="Horizontal" >
+                <TextBlock Margin="5"
+                        HorizontalAlignment="Center"
+                        Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
+                        Text="Theme changes will take affect after restart." />
+                <Button
+                x:Name="ExitRestart"
+                Click="ExitRestart_Click"
+                Content="Exit and Restart" />
 
-                    </StackPanel>
-                </syncfusion:SfAccordionItem>
-
-                <!--<syncfusion:SfAccordionItem Header="Editor" Visibility="Collapsed">
-                    <syncfusion:PropertyGrid
-                        x:Name="EditorSettingsPG"
-                        CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                        EnableGrouping="True"
-                        SelectedObject="{Binding EditorSettingsPGModel}" />
-                </syncfusion:SfAccordionItem>
-
-                <syncfusion:SfAccordionItem Header="Tools" Visibility="Collapsed">
-                    <syncfusion:PropertyGrid
-                        x:Name="ToolsSettingsPG"
-                        EnableGrouping="True"
-                        SelectedObject="{Binding ToolSettingsPGModel}" />
-                </syncfusion:SfAccordionItem>-->
-
-                <syncfusion:SfAccordionItem Header="Cyberpunk 2077">
-                    <StackPanel>
-                        <syncfusion:PropertyGrid
-                            AutoGeneratingPropertyGridItem="CP77SettingsPG_OnAutoGeneratingPropertyGridItem"
-                            x:Name="CP77SettingsPG"
-                            CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                            EnableGrouping="True"
-                            SelectedObject="{Binding cp77SettingsPGModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    </StackPanel>
-                </syncfusion:SfAccordionItem>
-
-                <!--<syncfusion:SfAccordionItem Header="The Witcher 3" Visibility="Collapsed">
-                    <syncfusion:PropertyGrid
-                        x:Name="TW3SettingsPG"
-                        CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                        EnableGrouping="True"
-                        SelectedObject="{Binding tw3SettingsPGModel}" />
-                </syncfusion:SfAccordionItem>-->
-            </syncfusion:SfAccordion>
+            </StackPanel>
         </Grid>
 
-        <!--<hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
-            <hc:SearchBar
-                x:Name="settingsSearch"
-                Margin="200,40,200,0"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Top"
-                BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-                IsRealTime="True">
-                <hc:Interaction.Triggers>
-                    <hc:EventTrigger EventName="SearchStarted">
-                        <hc:EventToCommand Command="{Binding SearchStartedCommand}" PassEventArgsToCommand="True" />
-                    </hc:EventTrigger>
-                </hc:Interaction.Triggers>
-            </hc:SearchBar>
-        </hc:TransitioningContentControl>-->
 
-        <!--<hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
+        <StackPanel
+            Margin="0,0,5,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Orientation="Horizontal"
+            >
 
-            <StackPanel
-                Margin="5"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Orientation="Horizontal">
+            <TextBlock
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center "
+                FontSize="20"
+                Text="Settings"
+                />
+            <hc:Divider
+                Height="45"
+                Margin="15"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Vertical"
+                />
+            <hc:AnimationPath
+                Width="45"
+                Height="45"
+                Data="{DynamicResource SettingsGeo}"
+                PathLength="250"
+                RenderTransformOrigin="0.5,0.5"
+                Stretch="Uniform"
+                Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                StrokeThickness="1.5"
+                Duration="00:00:08"
+                >
+                <hc:AnimationPath.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform />
+                        <SkewTransform />
+                        <RotateTransform Angle="180" />
+                        <TranslateTransform />
+                    </TransformGroup>
+                </hc:AnimationPath.RenderTransform>
+            </hc:AnimationPath>
+        </StackPanel>
 
-                <TextBlock
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center "
-                    FontSize="20"
-                    Text="Settings" />
-                <hc:Divider
-                    Height="45"
-                    Margin="15"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Orientation="Vertical" />
-                <hc:AnimationPath
-                    Width="45"
-                    Height="45"
-                    Margin="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Data="{DynamicResource SettingsGeo}"
-                    PathLength="30"
-                    Stretch="Uniform"
-                    Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                    StrokeThickness="1.5"
-                    Duration="00:00:06" />
-            </StackPanel>
-        </hc:TransitioningContentControl>-->
     </Grid>
 </reactiveUi:ReactiveUserControl>
